--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indicatif = "0.17.8"
 polars ={ version = "0.39.2", features = ["lazy", "parquet", "polars-io", "csv", "streaming"] }
+rayon = "1.10.0"
+walkdir = "2.5.0"
