--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[linker]
+linker = "x86_64-w64-mingw32-gcc"
 
 [dependencies]
 indicatif = "0.17.8"
