Added cli arg parser and code cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 linker = "x86_64-w64-mingw32-gcc"
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
 indicatif = "0.17.8"
 polars ={ version = "0.39.2", features = ["lazy", "parquet", "polars-io", "csv", "streaming"] }
 rayon = "1.10.0"
